atializacao index, produtoDAO, Main e PagamentoServer